<resources>
    <string name="app_name">SharedPreferenceColorPicker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="heading">Use the SeekBar to adjust background color</string>
    <string name="colorRed">Red</string>
    <string name="colorGreen">Green</string>
    <string name="colorBule">Blue</string>
    <string name="btnSet">Set</string>
    <string name="btnClear">Clear</string>
</resources>